# intelligence-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  package-lock.json  pyproject.toml  railway.toml  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatAssistant.tsx  DeveloperModePanel.tsx  Header.tsx  InputPanel.tsx  InsightsCharts.tsx  PipelineFlow.tsx  RecentQueriesTable.tsx  RetrievalPanel.tsx  Sidebar.tsx  StatCard.tsx  StepDetailsModal.tsx
logs/: runs.jsonl
notebook/: _cells_dump.txt  eda.ipynb
requirements/: train.txt
scripts/: run_serving_docker.ps1  run_training_local.ps1
src/: __init__.py  clean_data.py  index_rag.py  inspect_data.py  label_priority.py  load_data.py  prepare_datasets.py  preprocess_common.py  preprocessing.py  priority_schema.py  retrieve_rag.py  train_priority_baseline.py  triage_with_rag.py
src/LLM/: llm_client.py
src/ML/: __init__.py  compare_all_methods.py  compare_feature_sets.py  compare_model_regression_metrics.py  plot_model_metrics_histogram.py  predict_compare.py  predict_priority.py  predict_zero_shot.py  train_priority_baseline.py  visualize_embeddings.py
src/api/: main.py  schemas.py  services.py
src/api/routers/: __init__.py  compare.py  inspect.py  llm.py  ml.py  rag.py  system.py
src/features/: ml_features.py
src/observability/: __init__.py  run_logger.py  summarize_runs.py
src/rag/: index_rag.py  retrieve_rag.py  triage_with_rag.py
(+2 files in other folders)
