[project]
name = "decision-intelligence-assistant"
version = "0.1.0"
description = "RAG, ML, and LLM pipeline for customer support tickets (TWCS)."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0,<3",
    "scikit-learn>=1.3,<2",
    "xgboost>=2.0,<3",
    "scipy>=1.10,<2",
    "joblib>=1.3,<2",
    "numpy>=1.24,<3",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "openai>=1.40,<2",
    "chromadb>=0.5,<1",
    "sentence-transformers>=3.0,<4",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]

[tool.uv]
package = false
